--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <section id="about" class="mb-16 animate__animated animate__fadeIn">
                     <h2 class="text-4xl font-bold mb-6 text-secondary">نبذة عني</h2>
                     <div class="flex flex-col md:flex-row items-center gap-8">
-                        <img src="https://images.app.goo.gl/BfXznx6VRgW3c1ku6" alt="موسى عمر" class="rounded-full w-48 h-48 object-cover shadow-lg">
+                        <img src="my.png" alt="موسى عمر" class="rounded-full w-48 h-48 object-cover shadow-lg">
                         <div>
                             <p class="text-lg leading-relaxed mb-4">مرحبًا! أنا موسى عمر، مطور واجهات ويب محترف مع خبرة تزيد عن 5 سنوات في إنشاء تجارب مستخدم جذابة وتفاعلية. أنا شغوف بتحويل الأفكار إلى واقع رقمي باستخدام أحدث التقنيات وأفضل الممارسات في تطوير الويب.</p>
                             <p class="text-lg leading-relaxed">لقد عملت مع العديد من العملاء والشركات لتطوير حلول ويب مبتكرة تلبي احتياجاتهم وتتجاوز توقعاتهم. أسعى دائمًا لتحسين مهاراتي وتعلم تقنيات جديدة لتقديم أفضل النتائج لعملائي.</p>
