--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -76,8 +77,8 @@
                     <div class="flex flex-col md:flex-row items-center gap-8">
                         <img src="my.png" alt="موسى عمر" class="rounded-full w-48 h-48 object-cover shadow-lg">
                         <div>
-                            <p class="text-lg leading-relaxed mb-4">مرحبًا! أنا موسى عمر، مطور واجهات ويب محترف مع خبرة تزيد عن 5 سنوات في إنشاء تجارب مستخدم جذابة وتفاعلية. أنا شغوف بتحويل الأفكار إلى واقع رقمي باستخدام أحدث التقنيات وأفضل الممارسات في تطوير الويب.</p>
-                            <p class="text-lg leading-relaxed">لقد عملت مع العديد من العملاء والشركات لتطوير حلول ويب مبتكرة تلبي احتياجاتهم وتتجاوز توقعاتهم. أسعى دائمًا لتحسين مهاراتي وتعلم تقنيات جديدة لتقديم أفضل النتائج لعملائي.</p>
+                            <p class="text-lg leading-relaxed mb-4">مرحبًا! أنا موسى عمر، مطور واجهات ويب محترف مع خبرة تزيد عن 5 سنوات في إنشاء حلول ويب مبتكرة تلبي احتياجات العملاء.</p>
+                            <p class="text-lg leading-relaxed">لقد عملت مع العديد من العملاء والشركات لتطوير حلول ويب مبتكرة تلبي احتياجاتهم.</p>
                         </div>
                     </div>
                 </section>
@@ -86,19 +87,19 @@
                     <h2 class="text-4xl font-bold mb-6 text-secondary">المشاريع</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmostaql.hsoubcdn.com%2Fuploads%2Fportfolios%2F858690%2F61bb61a3abf75%2F1-02.jpg&tbnid=f1RzQ-hiEiX3UM&vet=1&imgrefurl=https%3A%2F%2Fmostaql.com%2Fportfolio%2F840883-%25D8%25AA%25D8%25B5%25D9%2585%25D9%258A%25D9%2585-%25D8%25A8%25D8%25B1%25D9%2588%25D9%2581%25D8%25A7%25D9%258A%25D9%2584-%25D8%25B4%25D8%25B1%25D9%2583%25D8%25A9-%25D8%25AA%25D9%2582%25D9%2586%25D9%258A%25D8%25A9&docid=z44xrH-ezlNO7M&w=8334&h=6250&source=sh%2Fx%2Fim%2Fm1%2F2&kgs=09ece244a1051010" alt="بروفايل شركة تقنية" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="my.png" alt="بروفايل شركة تقنية" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">بروفايل شركة تقنية</h3>
-                            <p class="text-gray-600 mb-4">تصميم وتطوير موقع ويب تفاعلي لشركة تقنية ناشئة، يعرض خدماتها ومنتجاتها بطريقة جذابة.</p>
+                            <p class="text-gray-600 mb-4">تصميم وتطوير موقع ويب تفاعلي لشركة تقنية ناشئة، يعرض خدماتها ومنتجاتها بطريقة مبتكرة.</p>
                             <p class="text-primary font-semibold">التقنيات: React, Next.js, Tailwind CSS</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="https://images.app.goo.gl/fv1rhc8JRQGZv2oz6" alt="منصة تعليم إلكتروني" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="my.png" alt="منصة تعليم إلكتروني" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">منصة تعليم إلكتروني</h3>
                             <p class="text-gray-600 mb-4">تطوير منصة تعليمية تفاعلية تتيح للمستخدمين الوصول إلى الدورات وتتبع تقدمهم.</p>
                             <p class="text-primary font-semibold">التقنيات: Vue.js, Vuex, Node.js, MongoDB</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="https://images.app.goo.gl/LXFiUd2FfKJXVhNR6" alt="تطبيق إدارة المهام" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="my.png" alt="تطبيق إدارة المهام" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">تطبيق إدارة المهام</h3>
                             <p class="text-gray-600 mb-4">تصميم وتطوير تطبيق ويب لإدارة المهام والمشاريع، مع ميزات التعاون وتتبع الوقت.</p>
                             <p class="text-primary font-semibold">التقنيات: React, Redux, Firebase</p>
@@ -148,11 +149,11 @@
                     <h2 class="text-4xl font-bold mb-6 text-secondary">آراء العملاء</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <p class="text-gray-600 mb-4">"موسى مطور رائع! لقد قام بتطوير موقعنا بكفاءة عالية وفي الوقت المحدد. نحن سعداء جدًا بالنتيجة."</p>
+                            <p class="text-gray-600 mb-4">"موسى مطور رائع! لقد قام بتطوير موقعنا بكفاءة عالية وفي الوقت المحدد. نحن سعداء بالنتائج."</p>
                             <p class="font-semibold">- أحمد محمد، مدير شركة تقنية</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md">
-                            <p class="text-gray-600 mb-4">"العمل مع موسى كان تجربة رائعة. لديه مهارات تقنية ممتازة وقدرة على فهم احتياجات العميل بسرعة."</p>
+                            <p class="text-gray-600 mb-4">"العمل مع موسى كان تجربة رائعة. لديه مهارات تقنية ممتازة وقدرة على فهم احتياجات العملاء."</p>
                             <p class="font-semibold">- سارة علي، صاحبة متجر إلكتروني</p>
                         </div>
                     </div>
@@ -240,4 +241,3 @@
     </script>
 </body>
 </html>
-
