--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
                     <h2 class="text-4xl font-bold mb-6 text-secondary">المشاريع</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="my.png" alt="بروفايل شركة تقنية" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="company.png" alt="بروفايل شركة تقنية" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">بروفايل شركة تقنية</h3>
                             <p class="text-gray-600 mb-4">تصميم وتطوير موقع ويب تفاعلي لشركة تقنية ناشئة، يعرض خدماتها ومنتجاتها بطريقة مبتكرة.</p>
                             <p class="text-primary font-semibold">التقنيات: React, Next.js, Tailwind CSS</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="my.png" alt="منصة تعليم إلكتروني" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="ta3lim.png" alt="منصة تعليم إلكتروني" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">منصة تعليم إلكتروني</h3>
                             <p class="text-gray-600 mb-4">تطوير منصة تعليمية تفاعلية تتيح للمستخدمين الوصول إلى الدورات وتتبع تقدمهم.</p>
                             <p class="text-primary font-semibold">التقنيات: Vue.js, Vuex, Node.js, MongoDB</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
-                            <img src="my.png" alt="تطبيق إدارة المهام" class="w-full h-40 object-cover rounded mb-4">
+                            <img src="To-do-App.png" alt="تطبيق إدارة المهام" class="w-full h-40 object-cover rounded mb-4">
                             <h3 class="text-xl font-semibold mb-2">تطبيق إدارة المهام</h3>
                             <p class="text-gray-600 mb-4">تصميم وتطوير تطبيق ويب لإدارة المهام والمشاريع، مع ميزات التعاون وتتبع الوقت.</p>
                             <p class="text-primary font-semibold">التقنيات: React, Redux, Firebase</p>
