--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موسى عمر - مطور واجهات ويب محترف</title>
+    <title>  Bn0mar.dev  </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -64,7 +64,7 @@
         <div class="flex-1 md:mr-64">
             <header class="bg-primary text-white p-4 sticky top-0 z-10 shadow-md">
                 <div class="container mx-auto flex justify-between items-center">
-                    <h1 class="text-3xl font-bold">موسى عمر</h1>
+                    <h1 class="text-3xl font-bold">Bn0mar.dev</h1>
                     <button id="open-sidebar" class="md:hidden">
                         <i data-lucide="menu" class="w-6 h-6"></i>
                     </button>
